// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas de GifExpertApp debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h1
    className="header-title"
  >
     GifExpertApp 
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="DragonBall"
      key="DragonBall"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas de GifExpertApp debe de verse correctamente GifExpertApp 1`] = `
<Fragment>
  <h1
    className="header-title"
  >
     GifExpertApp 
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
